<resources>
    <string name="app_name">Clock</string>
    <string name="action_settings">Settings</string>
    <string name="repeat">Repeat</string>
    <string name="vibrate">Vibrate</string>
    <string name="test">test</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="M">M</string>
    <string name="T">T</string>
    <string name="W">W</string>
    <string name="F">F</string>
    <string name="S">S</string>
    <string name="upcoming_alarm">Upcoming alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="alarm">Alarm</string>
    <string name="time">00:00</string>
    <string name="delete">Delete</string>
    <string name="choose_ringtone">Choose ringtone</string>
</resources>
