<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark">
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/repeat_checkbox_exp_view"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/repeat"
        android:textColor="@android:color/white"
        app:buttonTint="@android:color/white"/>
    <RelativeLayout
        android:id="@+id/container_bell_vibrate"
        android:layout_below="@id/repeat_checkbox_exp_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_toLeftOf="@+id/vibrate_checkbox"
            android:layout_toStartOf="@+id/vibrate_checkbox"
            android:id="@+id/name_alarm_rington"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:gravity="center_vertical"
            android:layout_gravity="start"
            android:textColor="@android:color/white"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:drawableLeft="@android:drawable/ic_menu_save"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/vibrate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibrate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/label_textview"
        android:layout_below="@id/container_bell_vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:drawableStart="@android:drawable/ic_menu_save"/>
    <View
        android:layout_below="@id/label_textview"
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divider"/>
</RelativeLayout>