<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="20dp"
              android:id="@+id/content_alarm_item"
              android:clickable="true"
              android:foreground="?attr/selectableItemBackgroundBorderless">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/clock_content_alarm_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:text="@string/time"/>

        <Switch
            android:id="@+id/switch_content_alarm_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:text=""/>
    </RelativeLayout>

    <include android:layout_height="wrap_content"
             android:layout_width="match_parent"
             layout="@layout/content_expanded_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_content_alarm_item">
        <Button
            android:id="@+id/delete_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            android:drawableStart="@android:drawable/ic_menu_delete"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/label_and_days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textColor="@android:color/white"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container_arrow_button">
            <ToggleButton
                android:id="@+id/arrow_button"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:foreground="@drawable/btn_custom_bg_arrow"
                android:foregroundGravity="center"
                android:background="@android:color/transparent"
                android:textOff=""
                android:textOn=""/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>